<resources>
    <string name="app_name">HoodooTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="example_email_com">example@email.com</string>
    <string name="captions">Captions</string>
    <string name="_43">43 Likes</string>
    <string name="comments">Comments</string>
    <string name="nice_pic">Nice Pic!!</string>
</resources>