<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.33"
        android:layout_margin="6dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        android:padding="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/commentsprofilepic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        android:src="@drawable/about"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commentuserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/commentemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_email_com"
            android:textStyle="bold"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    </LinearLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/actualcomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nice_pic"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>