<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.33"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:padding="10dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"
                    android:src="@drawable/about"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"/>

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_email_com"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>




            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/postphoto"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:layout_marginTop="8dp"
                android:src="@drawable/about"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tagRecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>


            <TextView
                android:id="@+id/postcaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/captions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>
            <TextView
                android:id="@+id/postLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/captions"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>




                <TextView
                    android:id="@+id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_43"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_baseline_favorite_24"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:id="@+id/dateuploaded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="20-Mar-2012 16:4:00"
                    android:textStyle="bold"
                    android:layout_marginVertical="6dp"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/getPostComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>
        </LinearLayout>




        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>